feat: add social meta

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
     <meta name="msapplication-TileColor" content="#3b3b3b" />
     <meta name="theme-color" content="#ffffff" />
+    <meta property="og:title" content="European Travel Destinations" />
+    <meta property="og:site_name" content="Klutchkick Media" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/images/og-social.jpg" />
+    <meta property="og:url" content="https://klutchkick.media" />
+    <meta name="twitter:card" content="summary_large_image" />
   </head>
   <body>
     <div id="app" class="layout"></div>
